...
                                <rect key="frame" x="177" y="447" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="7gu-bz-fi1"/>
                                    <constraint firstAttribute="height" constant="60" id="TTA-sD-AU6"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fd0-ib-jBh">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
...
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="likeButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bjh-LN-znv" userLabel="Like Button">
                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like Button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="5ez-vg-AlS"/>
                                                        <constraint firstAttribute="height" constant="42" id="msC-kK-d4S"/>
                                                    </constraints>
...
                                    <action selector="didTapActivityButton:" destination="way-si-bt0" eventType="touchUpInside" id="AWv-I3-HtJ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gWr-rP-shS">
                                <rect key="frame" x="9" y="55" width="24" height="24"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backwardButton"/>
                                <connections>
                                    <action selector="didTapBackButtonAction:" destination="way-si-bt0" eventType="touchUpInside" id="cPF-cO-fpj"/>
                                </connections>
                            </button>
...
